# app

./: .gitignore  .scss  LICENSE  README.md  components.json  eslint.config.mjs  generate-latest.cjs  next.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  version.cjs  version.txt
.github/workflows/: pr-check.yml
.next/: app-build-manifest.json  prerender-manifest.json  trace
.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/(main)/: page.js  page_client-reference-manifest.js
.next/server/chunks/ssr/: [root-of-the-server]__0a7a9c1e._.js  [root-of-the-server]__0a7a9c1e._.js.map  [root-of-the-server]__6302eb5e._.js  [root-of-the-server]__6302eb5e._.js.map  [root-of-the-server]__86e7898f._.js.map  [root-of-the-server]__e593daf2._.js  [root-of-the-server]__e593daf2._.js.map  node_modules_1f2539bc._.js  node_modules_1f2539bc._.js.map  node_modules_425176de._.js  node_modules_425176de._.js.map  node_modules_b59c985a._.js.map  node_modules_bf671b14._.js.map  node_modules_next_9babd674._.js.map  node_modules_next_dist_3a9f8461._.js.map  node_modules_next_dist_72e9dfa0._.js  node_modules_next_dist_72e9dfa0._.js.map  node_modules_next_dist_91ca79a1._.js  node_modules_next_dist_91ca79a1._.js.map  (+19 more)
.next/static/chunks/: [root-of-the-server]__8ebb6d4b._.css.map  node_modules_32cdcc71._.js  node_modules_32cdcc71._.js.map  node_modules_@swc_helpers_cjs_8e433861._.js.map  node_modules_a265e03e._.js  node_modules_a265e03e._.js.map  node_modules_f2979c3a._.js.map  node_modules_next_app_95ea274f.js.map  node_modules_next_dist_01fcdebf._.js.map  node_modules_next_dist_445d8acf._.js.map  node_modules_next_dist_7c4b9b2a._.js.map  node_modules_next_dist_ad6392d3._.js.map  node_modules_next_dist_client_20b209c9._.js.map  node_modules_next_dist_client_becf32a6._.js  node_modules_next_dist_client_becf32a6._.js.map  node_modules_next_dist_compiled_0f1b9fd4._.js.map  node_modules_next_dist_compiled_ca41998d._.js.map  node_modules_next_dist_compiled_next-devtools_index_82a36480.js  node_modules_next_dist_compiled_next-devtools_index_82a36480.js.map  node_modules_next_dist_compiled_next-devtools_index_d575f738.js  node_modules_next_dist_compiled_next-devtools_index_d575f738.js.map  node_modules_next_dist_compiled_react-dom_1f56dc06._.js.map  node_modules_next_dist_shared_lib_3cbd5cc2._.js  node_modules_next_dist_shared_lib_3cbd5cc2._.js.map  node_modules_next_dist_shared_lib_492fcef6._.js  node_modules_next_dist_shared_lib_492fcef6._.js.map  node_modules_next_error_8c8bf619.js.map  node_modules_react-dom_82bb97c6._.js.map  src_4a8aa8c1._.js  src_4a8aa8c1._.js.map  src_831679ac._.js  src_831679ac._.js.map  src_app_(main)_layout_tsx_a5672c47._.js  src_app_(main)_page_tsx_ecaa97dc._.js  src_assets_img_59b352e0._.js  src_assets_img_59b352e0._.js.map  src_assets_img_default-photo_png_mjs_1bb82ca1._.js  src_assets_img_default-photo_png_mjs_71a2fa69._.js  src_assets_img_default-photo_png_mjs_cebef3c5._.js  src_components_sidebar_module_scss_module_b13b17d3.css  (+1 more)
.old/src-old/: app.config.ts
.old/src-old/components/: SelectFriend.vue  Sidebar.vue  Titlebar.vue
.old/src-old/composables/: useAppInfo.ts  useAuth.ts
.old/src-old/layouts/: default.vue
.old/src-old/pages/: index.vue  overlay.vue
.old/src-old/utils/: crosshair.tsx  time.ts  updater.ts  utility.ts
dist-overlay/crosshair/: index.html
dist-overlay/notification/: index.html
public/: overlay.html
src/: app.vue
src-tauri/: .gitignore  2  Cargo.toml  build.rs  config.yml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/crates/overlay/: Cargo.toml  build.rs
src-tauri/crates/overlay/assets/: crosshair.html  notification.html  overlay.html
src-tauri/crates/overlay/src/: gui.rs  ipc.rs  lib.rs  renderer_client.rs  state.rs  ultralight.rs
src-tauri/crates/overlay/src/features/: crosshair.rs  fps.rs  mod.rs  notifications.rs
src-tauri/crates/overlay_renderer/: Cargo.toml
src-tauri/crates/overlay_renderer/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/capabilities/: default.json
src-tauri/src/clips/: clips.rs
src-tauri/src/dxgi/: audio.rs  clips.rs  mod.rs
src-tauri/src/integrations/: spotify.rs
src-tauri/src/user/: data.rs  mod.rs  token.rs  websocket.rs
src-tauri/src/utils/: audio.rs  fs.rs  game.rs  ipc.rs  logger.rs  mod.rs  rpc.rs  settings.rs
src-tauri/wix/: ServiceFragment.wsx
src/app/: global-error.tsx  global-not-found.tsx  globals.css  layout.tsx
src/app/(main)/: game-slot.tsx  layout.tsx  page.tsx
src/app/(overlay)/: layout.tsx  overlay.scss
src/assets/css/: tailwind.css
src/assets/scss/: main.scss
src/components/: GamePopup.vue  Image.vue  LaunchPopup.vue  Loader.vue  SelectFriend.vue  Sidebar.vue  Titlebar.vue  clip-player.tsx  error-alert.tsx  hotkey-recorder.tsx  settings-provider.tsx  sidebar.module.scss  sidebar.tsx  spinner.tsx  titlebar.module.scss  titlebar.tsx
src/components/ui/: combobox.tsx  tooltip.tsx
src/composables/: useAppInfo.ts  useAuth.ts  useDebounce.tsx  useFirebaseAuth.ts  useSocket.ts
src/hooks/: use-cached-image.tsx
src/layouts/: default.vue  overlay.vue
src/lib/: clips.ts  crosshair.tsx  daemon-helper.ts  notification.ts  once.ts  rpc.ts  settings.ts  types.ts  updater.ts  utils.ts  websocket.ts
src/pages/: clips.vue  favourites.vue  friends.vue  games.vue  index.vue  login.vue  logout.vue  messages.vue  overlay.vue  recentlyLaunched.vue  register.vue  settings.vue
src/pages/auth/: login.vue  register.vue
src/pages/crosshair/: index.vue
src/pages/friends/: index.vue  index_.vue
src/pages/games/: favourites.vue  index.vue  recent.vue
src/pages/messages/: index.vue
src/pages/settings/: index.vue
src/plugins/: firebase.client.ts
src/types/: game.ts  user.ts
src/utils/: crosshair.tsx  rpc.ts  settings.ts  updater.ts
src/utils/types/: Chat.ts  User.ts
(+47 files in other folders)
