[package]
name = "app"
version = "0.3.5-beta.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
tauri = { version = "2.8.5", features = ["tray-icon"] }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["json"] }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
fs = "0.0.5"
tauri-plugin-fs = "2.4.2"
actix-web = "4.3.1"
base64 = "0.22.1"
lazy_static = "1.5.0"
dotenv = "0.15.0"
rand = "0.9.2"
tokio = { version = "1.43.0", features = ["full"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-dialog = "2.4.0"
sysinfo = "0.37.0"
tauri-plugin-http = { version = "2.5.2", features = ["unsafe-headers"] }
dotenv_codegen = "0.15.0"
winreg = "0.55.0"
tauri-plugin-shell = "2.3.1"
windows = "0.62.0"
chrono = "0.4.41"
tauri-plugin-websocket = "2.4.0"
tokio-tungstenite = "0.27.0"
url = "2.5.7"
anyhow = "1.0.99"
futures-util = "0.3.31"
http = "1.3.1"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
tauri-plugin-opener= "2.5.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.4"
#tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.0"
#tauri-plugin-authium = "0.2.0-rc.1"
tauri-plugin-authium = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
