[package]
name = "app"
version = "0.3.7"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.83"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
chrono = "0.4.44"

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.2", features = ["tray-icon"] }
declarative-discord-rich-presence = { git = "https://github.com/KPidS/declarative-discord-rich-presence" }
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["json"] }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
fs = "0.0.5"
tauri-plugin-fs = "2.4.5"
actix-web = "4.11.0"
base64 = "0.22.1"
lazy_static = "1.5.0"
dotenv = "0.15.0"
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.6.0"
sysinfo = "0.38.2"
tauri-plugin-http = { version = "2.5.7", features = ["unsafe-headers"] }
dotenv_codegen = "0.15.0"
winreg = "0.55.0"
tauri-plugin-shell = "2.3.5"
# windows = "0.62.2"
chrono = "0.4.44"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_Security", "Win32_System_SystemServices", "Win32_System_Pipes", "Win32_Storage_FileSystem"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.0"
#tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-window-state = "2.4.1"
#tauri-plugin-authium = "0.2.0-rc.1"
tauri-plugin-authium = "0.2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = ["crates/overlay", "crates/overlay_renderer"]

# Local patch: skip WM_MOUSEMOVE channel-send at 4000 Hz without losing game input.
[patch.crates-io]
hudhook = { path = "vendor/hudhook" }

[dependencies.hudhook]
version = "0.8.2"
default-features = false
features = ["inject"]
