[package]
name = "overlay_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
ul-next = "0.5.4"
ul-next-sys = "=1.4.0-beta.158d65c-4"
windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_Security", "Win32_System_IO"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
